--- a/package.json
+++ b/package.json
@@ -1,23 +1,24 @@
 {
-  "name": "youtube-goal-setter",
-  "version": "1.0.0",
-  "description": "Youtube Goal Setter App",
-  "main": "server.js",
-  "scripts": {
-    "start": "node backend/server.js",
-    "server": "nodemon backend/server.js"
-  },
-  "author": "Sumit Pandey",
-  "license": "ISC",
-  "dependencies": {
-    "bcrypt": "^5.0.1",
-    "dotenv": "^16.0.0",
-    "express": "^4.17.2",
-    "express-async-handler": "^1.2.0",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.2.1"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.15"
-  }
+    "name": "youtube-goal-setter",
+    "version": "1.0.0",
+    "description": "Youtube Goal Setter App",
+    "main": "server.js",
+    "scripts": {
+        "start": "node backend/server.js",
+        "server": "nodemon backend/server.js",
+        "client": "npm start --prefix frontend"
+    },
+    "author": "Sumit Pandey",
+    "license": "ISC",
+    "dependencies": {
+        "bcrypt": "^5.0.1",
+        "dotenv": "^16.0.0",
+        "express": "^4.17.2",
+        "express-async-handler": "^1.2.0",
+        "jsonwebtoken": "^8.5.1",
+        "mongoose": "^6.2.1"
+    },
+    "devDependencies": {
+        "nodemon": "^2.0.15"
+    }
 }
